# django-keycloak

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
examples/resource_provider_api/: manage.py
examples/resource_provider_api/resource_provider_api/: asgi.py  settings.py  urls.py  views.py  wsgi.py
src/django_keycloak/: admin.py  apps.py  authentication.py  backends.py  middleware.py  models.py  tools.py  urls.py  views.py
src/django_keycloak/management/commands/: add_client.py  set_realm.py
src/django_keycloak/migrations/: 0001_initial.py  0002_delete_keycloakuser.py  0002_remove_client_realm_and_more.py
